--- a/daikoku/javascript/src/style/layout/navbar.scss
+++ b/daikoku/javascript/src/style/layout/navbar.scss
@@ -72,3 +72,229 @@ a.navbar-brand, #teamSelector:hover {
     color:$navbar-text-hover-color;
   }
 }
+
+
+
+
+///////////////////// new navbar
+
+.navbar-container {
+  height: 100vh;
+  // background-color: $navbar-bg-color;
+  // position: 'relative';
+  // color: $navbar-text-color;
+
+
+  .navbar {
+    height: 100%;
+    width: 55px;
+    min-height: 300px;
+    overflow-y: hidden;
+  }
+}
+
+.navbar-panel {
+  position: absolute;
+  overflow: hidden;
+  width: 0;
+  height: 100vh;
+  z-index: 1000;
+  top: 0;
+  left: 55px;
+  background-color: #fff;
+  color: #000;
+
+  transition: width .2s ease-in-out;
+
+  &.opened {
+    width: calc(35vw - 55px);
+    overflow-y: auto;
+  }
+
+  .navbar-panel__back {
+    height: 40px;
+    width: 40px;
+    &:hover {
+      border-radius: 50%;
+      background-color: #EBECF0;
+    }
+  }
+}
+
+.navbar-panel-background {
+  position: absolute;
+  width: 0;
+  height: 100vh;
+  z-index: 1000;
+  top: 0; right: 0;
+  background-color: #000;
+  opacity: 0.3;
+  width: 0;
+
+  transition: width .2s ease-in-out;
+
+  &.opened {
+    width: 65vw;
+  }
+}
+
+/// search panel
+
+.panel {
+  .blocks {
+    .block {
+      .block__category {
+        color: gray;
+        text-transform: capitalize;
+        font-weight: 600;
+        font-size: 12px;
+      }
+
+      .block__entries {
+        .block__entry__link {
+          cursor: pointer;
+          font-size: 14px;
+          color: #000;
+          margin-bottom: 5px;
+          line-height: 40px;
+          border-radius: 4px;
+          padding-left: .5rem;
+
+          &:hover {
+            background-color: #EBECF0;
+          }
+        }
+      }
+    }
+  }
+}
+
+/// companion
+
+.navbar-companion {
+  z-index: 1000;
+  background-color: $aside-bg-color;
+  height: 100vh;
+  position: relative;
+  min-width: 20px;
+  width: 20px; height: 100vh;
+  transition: width .2s ease-in-out;
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+
+  &.opened {
+    width: 240px;
+
+    .companion-content {
+      opacity: 1;
+      transition: opacity 0s .2s;
+    }
+  }
+
+  .companion-content {
+    overflow-y: auto;
+    opacity: 0;
+    transition: opacity 0s 0s;
+    padding: .5rem 1rem 0 1rem;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    .companion-title {
+      height: 40px;
+      min-height: 40px;
+      margin-bottom: 1rem;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      line-height: 1.14286;
+      color: $aside-text-color;
+      font-weight: 600;
+    }
+
+
+    .blocks {
+      flex-grow: 1;
+      
+      .block {
+        .block__entries {
+          .block__entry__link {
+            cursor: pointer;
+            font-size: 14px;
+            color: $aside-text-color;
+            margin-bottom: 5px;
+            line-height: 40px;
+            border-radius: 4px;
+            padding-left: .5rem;
+
+            &.active {
+              background-color: $menu-text-hover-bg-color;
+              color: $menu-text-hover-color;
+            }
+
+            &.disabled {
+              color: lighten(#000, 50%);
+              cursor: default;
+            }
+
+            &:hover {
+              background-color: $menu-text-hover-bg-color;
+            }
+          }
+
+          .submenu__entry__link {
+            cursor: pointer;
+            font-size: 14px;
+            color: $aside-text-color;
+            margin-bottom: 5px;
+            line-height: 40px;
+            padding-left: .5rem;
+            box-sizing: border-box;
+            height: 40px;
+
+            &.active {
+              border-bottom: 1px solid $menu-text-hover-bg-color;
+              // color: $menu-text-hover-color;
+            }
+            
+            &.disabled {
+              color: lighten(#000, 50%);
+              cursor: default;
+            }
+            
+            &:hover {
+              border-bottom: 1px solid $menu-text-hover-bg-color;
+            }
+          }
+
+          .entry__submenu {
+            margin-left: 1rem;
+            font-size: 14px;
+          }
+        }
+      }
+    }
+  }
+
+  .companion-button {
+    position: absolute; top: 20px; right: -12px; z-index: 1000;
+    width: 24px; height: 24px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    background-color: #fff;
+    color: #000;
+    border: 1px solid rgba($color: #000000, $alpha: 0.1);
+
+    svg {
+      height: 14px;
+    }
+
+    &:hover {
+      background-color: steelblue;
+      color: #fff;
+      border: 1px solid midnightblue;
+    }
+  }
+}
