--- a/daikoku/javascript/src/style/layout/style.scss
+++ b/daikoku/javascript/src/style/layout/style.scss
@@ -265,3 +265,11 @@ img:hover+.changePicture,.changePicture:hover{
 #redoc-container {
   background-color: #fafafa;
 }
+
+.wrapper{
+  height: 100vh;
+  overflow: scroll;
+  padding-top: 10px;
+  padding-left: 5px;
+  padding-right: 20px;
+}
