--- a/daikoku/javascript/src/style/layout/navbar.scss
+++ b/daikoku/javascript/src/style/layout/navbar.scss
@@ -161,7 +161,8 @@ a.navbar-brand, #teamSelector:hover {
           padding-left: .5rem;
 
           &:hover {
-            background-color: var(--menu-text-hover-bg-color, #9bb0c5);;
+            background-color: var(--menu-text-hover-bg-color, #9bb0c5);
+            color: var(--menu-text-hover-color, #fff);
           }
         }
       }
@@ -243,6 +244,7 @@ a.navbar-brand, #teamSelector:hover {
 
             &:hover {
               background-color: $menu-text-hover-bg-color;
+              color: var(--menu-text-hover-color, #fff);
             }
           }
 
