--- a/daikoku/javascript/src/style/layout/navbar.scss
+++ b/daikoku/javascript/src/style/layout/navbar.scss
@@ -149,7 +149,9 @@ a.navbar-brand, #teamSelector:hover {
         font-weight: 600;
         font-size: 12px;
       }
-
+      .block__border {
+        border-left: 1px solid var(--navbar-bg-color, #7f96af);
+      }
       .block__entries {
         .block__entry__link {
           cursor: pointer;
@@ -159,9 +161,9 @@ a.navbar-brand, #teamSelector:hover {
           line-height: 40px;
           border-radius: 4px;
           padding-left: .5rem;
-
           &:hover {
-            background-color: #EBECF0;
+            background-color: var(--menu-text-hover-bg-color, #9bb0c5);
+            color: var(--menu-text-hover-color, #fff);
           }
         }
       }
@@ -200,7 +202,7 @@ a.navbar-brand, #teamSelector:hover {
     flex-direction: column;
 
     .companion-title {
-      height: 40px;
+      // height: 40px;
       min-height: 40px;
       margin-bottom: 1rem;
       overflow: hidden;
@@ -209,6 +211,11 @@ a.navbar-brand, #teamSelector:hover {
       line-height: 1.14286;
       color: $aside-text-color;
       font-weight: 600;
+
+      h3{
+        white-space: normal;
+        word-break: break-word;
+      }
     }
 
 
@@ -225,7 +232,6 @@ a.navbar-brand, #teamSelector:hover {
             line-height: 40px;
             border-radius: 4px;
             padding-left: .5rem;
-
             &.active {
               background-color: $menu-text-hover-bg-color;
               color: $menu-text-hover-color;
@@ -238,6 +244,7 @@ a.navbar-brand, #teamSelector:hover {
 
             &:hover {
               background-color: $menu-text-hover-bg-color;
+              color: var(--menu-text-hover-color, #fff);
             }
           }
 
