--- a/daikoku/javascript/src/style/components/apicard.scss
+++ b/daikoku/javascript/src/style/components/apicard.scss
@@ -107,7 +107,7 @@ a.card-link:hover, a.card-link:visited, a.card-link:link, a.card-link:active {
 
 .card {
   #dropdownMenuButton {
-    color: $menu-text-hover-color;
+    color: $menu-text-color;
   }
 }
 
