--- a/daikoku/javascript/src/style/components/form.scss
+++ b/daikoku/javascript/src/style/components/form.scss
@@ -17,3 +17,10 @@
     border: 1px solid $form-border-color;
 }
 
+
+.form-loader {
+  width: 100%;
+  height: 80vh;
+  background-color: silver;
+  border-radius: 20px;
+}
