Doc page edition is working except import

--- a/daikoku/javascript/src/style/main.scss
+++ b/daikoku/javascript/src/style/main.scss
@@ -35,3 +35,4 @@
 @import 'components/discussion.scss';
 @import 'components/messages.scss';
 @import 'components/breadcrumb.scss';
+@import 'components/dragAndDropDoc.scss';
