--- a/daikoku/javascript/src/components/utils/dnd/components/Action.module.scss
+++ b/daikoku/javascript/src/components/utils/dnd/components/Action.module.scss
@@ -2,15 +2,15 @@ $focused-outline-color: #4c9ffe;
 
 .Action {
   display: flex;
-  width: 12px;
-  padding: 15px;
+  // width: 12px;
+  // padding: 15px;
   align-items: center;
   justify-content: center;
   flex: 0 0 auto;
   touch-action: none;
   cursor: var(--cursor, pointer);
   border-radius: 5px;
-  border: none;
+  // border: none;
   outline: none;
   appearance: none;
   background-color: transparent;
