Rewrite part of UI

--- a/daikoku/javascript/src/style/components/fastApiCard.scss
+++ b/daikoku/javascript/src/style/components/fastApiCard.scss
@@ -1,4 +1,6 @@
+@import '../variables.scss';
 /* fast cards*/
 .fast__hover:hover {
-  background-color: #eeeeee;
+  background-color: $menu-text-hover-bg-color;
+  color: $menu-text-hover-color;
 }
