--- a/daikoku/javascript/src/style/components/btn.scss
+++ b/daikoku/javascript/src/style/components/btn.scss
@@ -62,6 +62,7 @@ button {
 .btn-outline-success:disabled,
 .btn-outline-primary.disabled,
 .btn-outline-primary:disabled {
+  background-color: #fff;
   border-color: #9e9e9e;
   color: #9e9e9e;
   &:hover,
@@ -71,6 +72,7 @@ button {
 }
 
 .btn-outline-success {
+  background-color: #fff;
   color: $success-color;
   border-color: $success-color;
   &:hover,
@@ -82,6 +84,7 @@ button {
 }
 
 .btn-outline-danger {
+  background-color: #fff;
   color: $danger-color;
   border-color: $danger-color;
   &:hover,
@@ -93,6 +96,7 @@ button {
 }
 
 .btn-outline-primary {
+  background-color: #fff;
   color: $info-color;
   border-color: $info-color;
   &:hover,
