Add explain text for fast mode

--- a/daikoku/javascript/src/style/main.scss
+++ b/daikoku/javascript/src/style/main.scss
@@ -36,4 +36,4 @@
 @import 'components/messages.scss';
 @import 'components/breadcrumb.scss';
 @import 'components/dragAndDropDoc.scss';
-@import 'components/fastApiCard.scss';
+@import 'components/fastMode.scss';
