Add a page to vizualize and update Subscription process

--- a/daikoku/javascript/src/style/main.scss
+++ b/daikoku/javascript/src/style/main.scss
@@ -37,3 +37,4 @@
 @import 'components/breadcrumb.scss';
 @import 'components/dragAndDropDoc.scss';
 @import 'components/fastMode.scss';
+@import 'components/sortable.scss';
