--- a/daikoku/app/views/main.scala.html
+++ b/daikoku/app/views/main.scala.html
@@ -10,7 +10,7 @@
       @moreStyles
       <!--link href="https://fonts.googleapis.com/css?family=Raleway:400,500" rel="stylesheet"></link-->
       <link href="@routes.Assets.versioned("fonts/raleway/raleway.css")" rel="stylesheet"></link>
-      <link href="@routes.Assets.versioned("fonts/fontawesome/css/all.css")" rel="stylesheet"></link>
+      <link href="@routes.Assets.versioned("fonts/fontawesome/css/all.min.css")" rel="stylesheet"></link>
     </head>
     <body>
       @content
