--- a/daikoku/javascript/src/style/components/dragAndDropDoc.scss
+++ b/daikoku/javascript/src/style/components/dragAndDropDoc.scss
@@ -1,10 +1,8 @@
-
-
 .tree-item {
   --vertical-padding: 10px;
 
   border-radius: 4px;
-  
+
   position: relative;
   display: flex;
   align-items: center;
@@ -13,37 +11,22 @@
   border: 1px solid #dedede;
   color: #222;
   box-sizing: border-box;
-  
+
   margin-top: 5px;
 
   .remove-button {
     position: absolute;
-    display: none;
     top: -10px;
     right: -10px;
-    border: 1px solid $danger-color;
-    width: 40px;
-    height: 40px;
-    padding: 0px;
-
-    svg {
-      color: $danger-color;
-    }
-
+    color: $danger-color;
     &:hover {
       background-color: $danger-color;
-
-      svg {
-        color: #fff;
-      }
     }
   }
 
   &:hover {
     .remove-button {
-      display: block;
+      display: block !important;
     }
   }
-
-  
 }
